--- a/disjob-core/pom.xml
+++ b/disjob-core/pom.xml
@@ -13,7 +13,7 @@
 
   <artifactId>disjob-core</artifactId>
   <name>${project.artifactId}</name>
-  <description>disjob core module</description>
+  <description>Distributed job core module</description>
   <url>https://github.com/ponfee/disjob</url>
 
   <dependencies>
