--- a/disjob-registry/disjob-registry-nacos/pom.xml
+++ b/disjob-registry/disjob-registry-nacos/pom.xml
@@ -13,7 +13,7 @@
 
   <artifactId>disjob-registry-nacos</artifactId>
   <name>${project.artifactId}</name>
-  <description>disjob registry nacos module</description>
+  <description>Distributed job registry nacos module</description>
   <url>https://github.com/ponfee/disjob</url>
 
   <dependencies>
