--- a/disjob-test/pom.xml
+++ b/disjob-test/pom.xml
@@ -13,7 +13,7 @@
 
   <artifactId>disjob-test</artifactId>
   <name>${project.artifactId}</name>
-  <description>disjob test module</description>
+  <description>Distributed job test module</description>
   <url>https://github.com/ponfee/disjob</url>
 
   <dependencies>
