--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
   <modules>
     <module>disjob-common</module>
     <module>disjob-core</module>
+    <module>disjob-id</module>
     <module>disjob-test</module>
     <module>disjob-supervisor</module>
     <module>disjob-worker</module>
@@ -79,6 +80,7 @@
     <graphviz-java.version>0.18.1</graphviz-java.version>
     <testcontainers.version>1.18.0</testcontainers.version>
 
+    <!-- spring-boot-dependencies [type=pom, scope=import]方式，无法自动引入plugin依赖版本 -->
     <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
     <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
     <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
@@ -119,6 +121,11 @@
       <dependency>
         <groupId>cn.ponfee</groupId>
         <artifactId>disjob-core</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>cn.ponfee</groupId>
+        <artifactId>disjob-id</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
