--- a/disjob-reports/pom.xml
+++ b/disjob-reports/pom.xml
@@ -27,6 +27,10 @@
     </dependency>
     <dependency>
       <groupId>cn.ponfee</groupId>
+      <artifactId>disjob-id</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>cn.ponfee</groupId>
       <artifactId>disjob-supervisor</artifactId>
     </dependency>
     <dependency>
