--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
     <commons-io.version>2.11.0</commons-io.version>
     <joda-time.version>2.12.5</joda-time.version>
     <mybatis-spring-boot-starter.version>2.3.0</mybatis-spring-boot-starter.version>
+    <curator-recipes.version>5.5.0</curator-recipes.version>
     <springdoc-openapi-ui.version>1.7.0</springdoc-openapi-ui.version>
     <mariaDB4j.version>2.5.3</mariaDB4j.version>
     <embedded-redis.version>1.2</embedded-redis.version>
