--- a/disjob-samples/disjob-samples-separately/disjob-samples-separately-worker-frameless/pom.xml
+++ b/disjob-samples/disjob-samples-separately/disjob-samples-separately-worker-frameless/pom.xml
@@ -33,6 +33,10 @@
         </exclusion>
         <exclusion>
           <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-actuator</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-jdbc</artifactId>
         </exclusion>
       </exclusions>
