--- a/disjob-samples/disjob-samples-merged/pom.xml
+++ b/disjob-samples/disjob-samples-merged/pom.xml
@@ -16,6 +16,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>de.codecentric</groupId>
+      <artifactId>spring-boot-admin-starter-server</artifactId>
+      <version>${spring-boot-admin.version}</version>
+    </dependency>
+    <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>disjob-supervisor</artifactId>
     </dependency>
