--- a/disjob-samples/disjob-samples-separately/disjob-samples-separately-worker-springboot/pom.xml
+++ b/disjob-samples/disjob-samples-separately/disjob-samples-separately-worker-springboot/pom.xml
@@ -30,8 +30,9 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-actuator</artifactId>
+      <groupId>de.codecentric</groupId>
+      <artifactId>spring-boot-admin-starter-client</artifactId>
+      <version>${spring-boot-admin.version}</version>
     </dependency>
   </dependencies>
 
