--- a/disjob-samples/disjob-samples-separately/disjob-samples-separately-worker-springboot/src/main/resources/application.yml
+++ b/disjob-samples/disjob-samples-separately/disjob-samples-separately-worker-springboot/src/main/resources/application.yml
@@ -1,2 +1,7 @@
 server.port: 8083
 spring.profiles.include: web,worker,redis,consul
+
+spring.boot.admin.client:
+  url: http://localhost:8081
+  instance:
+    service-host-type: IP
