--- a/disjob-samples/conf-supervisor/application-mysql.yml
+++ b/disjob-samples/conf-supervisor/application-mysql.yml
@@ -2,8 +2,8 @@
 spring.datasource.disjob:
   driver-class-name: com.mysql.cj.jdbc.Driver
   jdbc-url: jdbc:mysql://localhost:3306/disjob?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
-  username: root
-  password:
+  username: disjob
+  password: disjob123456
   minimum-idle: 10
   maximum-pool-size: 200
   connection-timeout: 2000
