--- a/disjob-registry/disjob-registry-api/pom.xml
+++ b/disjob-registry/disjob-registry-api/pom.xml
@@ -20,6 +20,7 @@
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>disjob-core</artifactId>
+      <version>${project.parent.version}</version>
     </dependency>
   </dependencies>
 
