--- a/disjob-registry/disjob-registry-redis/pom.xml
+++ b/disjob-registry/disjob-registry-redis/pom.xml
@@ -20,6 +20,7 @@
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>disjob-registry-api</artifactId>
+      <version>${project.parent.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -29,6 +30,7 @@
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>disjob-test</artifactId>
+      <version>${project.parent.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
