--- a/disjob-core/pom.xml
+++ b/disjob-core/pom.xml
@@ -26,6 +26,7 @@
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>disjob-common</artifactId>
+      <version>${project.parent.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
