--- a/disjob-dispatch/disjob-dispatch-redis/pom.xml
+++ b/disjob-dispatch/disjob-dispatch-redis/pom.xml
@@ -20,6 +20,7 @@
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>disjob-dispatch-api</artifactId>
+      <version>${project.parent.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
