--- a/disjob-id/pom.xml
+++ b/disjob-id/pom.xml
@@ -20,6 +20,7 @@
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>disjob-common</artifactId>
+      <version>${project.parent.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.curator</groupId>
