--- a/disjob-registry/disjob-registry-etcd/pom.xml
+++ b/disjob-registry/disjob-registry-etcd/pom.xml
@@ -24,6 +24,7 @@
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>disjob-registry-api</artifactId>
+      <version>${project.parent.version}</version>
     </dependency>
     <dependency>
       <groupId>io.etcd</groupId>
