--- a/disjob-registry/disjob-registry-nacos/pom.xml
+++ b/disjob-registry/disjob-registry-nacos/pom.xml
@@ -20,6 +20,7 @@
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>disjob-registry-api</artifactId>
+      <version>${project.parent.version}</version>
     </dependency>
     <dependency>
       <groupId>com.alibaba.nacos</groupId>
