--- a/disjob-samples/disjob-samples-merged/pom.xml
+++ b/disjob-samples/disjob-samples-merged/pom.xml
@@ -22,6 +22,10 @@
     </dependency>
     <dependency>
       <groupId>cn.ponfee</groupId>
+      <artifactId>disjob-id</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>cn.ponfee</groupId>
       <artifactId>disjob-supervisor</artifactId>
     </dependency>
     <dependency>
@@ -31,10 +35,7 @@
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>disjob-samples-common</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>cn.ponfee</groupId>
-      <artifactId>disjob-id</artifactId>
+      <version>${project.parent.version}</version>
     </dependency>
   </dependencies>
 
