--- a/disjob-samples/disjob-samples-separately/disjob-samples-separately-supervisor/pom.xml
+++ b/disjob-samples/disjob-samples-separately/disjob-samples-separately-supervisor/pom.xml
@@ -17,15 +17,16 @@
   <dependencies>
     <dependency>
       <groupId>cn.ponfee</groupId>
+      <artifactId>disjob-id</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>cn.ponfee</groupId>
       <artifactId>disjob-supervisor</artifactId>
     </dependency>
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>disjob-samples-common</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>cn.ponfee</groupId>
-      <artifactId>disjob-id</artifactId>
+      <version>${project.parent.version}</version>
     </dependency>
   </dependencies>
 
