--- a/disjob-samples/disjob-samples-separately/disjob-samples-separately-worker-springboot/pom.xml
+++ b/disjob-samples/disjob-samples-separately/disjob-samples-separately-worker-springboot/pom.xml
@@ -22,6 +22,7 @@
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>disjob-samples-common</artifactId>
+      <version>${project.parent.version}</version>
       <exclusions>
         <exclusion>
           <groupId>org.springframework.boot</groupId>
