--- a/disjob-samples/disjob-samples-common/pom.xml
+++ b/disjob-samples/disjob-samples-common/pom.xml
@@ -77,6 +77,12 @@
       <artifactId>disjob-dispatch-http</artifactId>
     </dependency>
     -->
+
+    <dependency>
+      <groupId>cn.ponfee</groupId>
+      <artifactId>disjob-test</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
