--- a/disjob-samples/disjob-samples-common/src/main/resources/application-web.yml
+++ b/disjob-samples/disjob-samples-common/src/main/resources/application-web.yml
@@ -21,12 +21,12 @@ spring.thymeleaf:
   check-template: false
   check-template-location: false
 
-# “swagger-ui” and “/api-docs endpoint” custom path
+# springdoc “swagger-ui” and “/api-docs endpoint” custom path
 springdoc:
   swagger-ui:
-    path: /docs.html
+    path: /swagger-ui/docs.html
     layout: StandaloneLayout
-  api-docs.path: /docs
+  api-docs.path: /swagger-ui/docs
 
 # tomcat server configuration
 server.tomcat:
