optimize catch exception

--- a/disjob-supervisor/src/test/resources/application-mysql.yml
+++ b/disjob-supervisor/src/test/resources/application-mysql.yml
@@ -3,7 +3,7 @@ spring.datasource.disjob:
   driver-class-name: com.mysql.cj.jdbc.Driver
   jdbc-url: jdbc:mysql://localhost:3306/disjob?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
   username: disjob
-  password: disjob123456
+  password: disjob$123456
   minimum-idle: 10
   maximum-pool-size: 100
   connection-timeout: 2000
