--- a/disjob-samples/disjob-samples-common/src/main/resources/application-web.yml
+++ b/disjob-samples/disjob-samples-common/src/main/resources/application-web.yml
@@ -24,9 +24,9 @@ spring.thymeleaf:
 # springdoc “swagger-ui” and “/api-docs endpoint” custom path
 springdoc:
   swagger-ui:
-    path: /swagger-ui/docs.html
+    path: /docs.html
     layout: StandaloneLayout
-  api-docs.path: /swagger-ui/docs
+  api-docs.path: /docs
 
 # tomcat server configuration
 server.tomcat:
