--- a/disjob-supervisor/src/test/resources/application.yml
+++ b/disjob-supervisor/src/test/resources/application.yml
@@ -1,2 +1,31 @@
-spring.profiles:
-  include: web,mysql,supervisor,redis
+server.port: 8080
+
+# database configuration
+spring.datasource.disjob:
+  driver-class-name: com.mysql.cj.jdbc.Driver
+  jdbc-url: jdbc:mysql://localhost:3306/disjob?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
+  username: disjob
+  password: disjob$123456
+  minimum-idle: 10
+  maximum-pool-size: 100
+  connection-timeout: 2000
+  pool-name: disjob
+
+
+# redis configuration
+spring.redis:
+  client-type: LETTUCE
+
+  password: 123456               # redis node auth password
+  #username: node_auth           # redis node auth username(redis 6.x ACL)
+
+  # redis standalone config
+  host: localhost                # redis standalone host name
+  port: 6379                     # redis standalone port
+
+  # redis sentinel config
+  #sentinel:
+  #  master: REDIS_SENTINEL
+  #  nodes: 112.74.170.75:16379,112.74.170.75:16380
+  #  #password: 123456            # redis sentinel auth password
+  #  #username: sentinel_auth     # redis sentinel auth username(redis 6.x ACL)
