--- a/disjob-common/pom.xml
+++ b/disjob-common/pom.xml
@@ -17,12 +17,6 @@
   <url>https://github.com/ponfee/disjob</url>
 
   <dependencies>
-    <!-- https://mapstruct.org/documentation/1.5/reference/html/ -->
-    <dependency>
-      <groupId>org.mapstruct</groupId>
-      <artifactId>mapstruct</artifactId>
-      <version>${mapstruct.version}</version>
-    </dependency>
     <dependency>
       <groupId>jakarta.servlet</groupId>
       <artifactId>jakarta.servlet-api</artifactId>
@@ -108,6 +102,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-jdbc</artifactId>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
