--- a/disjob-id/pom.xml
+++ b/disjob-id/pom.xml
@@ -23,6 +23,10 @@
       <version>${project.parent.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-jdbc</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.curator</groupId>
       <artifactId>curator-framework</artifactId>
       <version>${curator-recipes.version}</version>
