--- a/disjob-supervisor/pom.xml
+++ b/disjob-supervisor/pom.xml
@@ -17,6 +17,17 @@
   <url>https://github.com/ponfee/disjob</url>
 
   <dependencies>
+    <!-- https://mapstruct.org/documentation/1.5/reference/html/ -->
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct</artifactId>
+      <version>${mapstruct.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-jdbc</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
