--- a/disjob-samples/conf-supervisor/application-mysql.yml
+++ b/disjob-samples/conf-supervisor/application-mysql.yml
@@ -1,5 +1,5 @@
 # database configuration
-spring.datasource.disjob:
+disjob.datasource:
   driver-class-name: com.mysql.cj.jdbc.Driver
   jdbc-url: jdbc:mysql://localhost:3306/disjob?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
   username: disjob
