--- a/disjob-core/pom.xml
+++ b/disjob-core/pom.xml
@@ -17,6 +17,13 @@
   <url>https://github.com/ponfee/disjob</url>
 
   <dependencies>
+    <!-- https://mapstruct.org/documentation/1.5/reference/html/ -->
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct</artifactId>
+      <version>${mapstruct.version}</version>
+    </dependency>
+
     <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-ui</artifactId>
