--- a/disjob-admin/ruoyi-disjob/src/main/resources/application-disjob-mysql.yml
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/application-disjob-mysql.yml
@@ -1,9 +1,9 @@
 # database configuration
 disjob.datasource:
   driver-class-name: com.mysql.cj.jdbc.Driver
-  jdbc-url: jdbc:mysql://localhost:3306/disjob_admin?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
-  username: disjob_admin
-  password: disjob_admin$123456
+  jdbc-url: jdbc:mysql://localhost:3306/disjob?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
+  username: disjob
+  password: disjob$123456
   minimum-idle: 10
   maximum-pool-size: 200
   connection-timeout: 2000
