--- a/disjob-admin/ruoyi-framework/pom.xml
+++ b/disjob-admin/ruoyi-framework/pom.xml
@@ -6,7 +6,7 @@
 
   <parent>
     <groupId>cn.ponfee</groupId>
-    <artifactId>disjob-admin-parent</artifactId>
+    <artifactId>disjob-admin</artifactId>
     <version>${revision}</version>
   </parent>
 
