--- a/disjob-samples/pom.xml
+++ b/disjob-samples/pom.xml
@@ -22,7 +22,7 @@
     <maven.install.skip>true</maven.install.skip>
     <maven.deploy.skip>true</maven.deploy.skip>
 
-    <disjob.version>2.0.0-SNAPSHOT</disjob.version>
+    <disjob.version>2.0.0</disjob.version>
     <spring-boot.version>2.7.13</spring-boot.version>
     <spring-boot-admin.version>2.7.10</spring-boot-admin.version>
     <mapstruct.version>1.5.5.Final</mapstruct.version>
