--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
   </modules>
 
   <properties>
-    <revision>2.0.0-SNAPSHOT</revision>
+    <revision>2.0.0</revision>
     <file.encoding>UTF-8</file.encoding>
     <java.version>1.8</java.version>
     <project.build.sourceEncoding>${file.encoding}</project.build.sourceEncoding>
