--- a/disjob-samples/pom.xml
+++ b/disjob-samples/pom.xml
@@ -12,6 +12,8 @@
 
   <properties>
     <revision>1.0-SNAPSHOT</revision>
+    <disjob.version>2.0.1-SNAPSHOT</disjob.version>
+
     <file.encoding>UTF-8</file.encoding>
     <java.version>1.8</java.version>
     <project.build.sourceEncoding>${file.encoding}</project.build.sourceEncoding>
@@ -22,7 +24,6 @@
     <maven.install.skip>true</maven.install.skip>
     <maven.deploy.skip>true</maven.deploy.skip>
 
-    <disjob.version>2.0.0</disjob.version>
     <spring-boot.version>2.7.13</spring-boot.version>
     <spring-boot-admin.version>2.7.10</spring-boot-admin.version>
     <mapstruct.version>1.5.5.Final</mapstruct.version>
