--- a/disjob-admin/ruoyi-admin/src/main/resources/application-druid.yml
+++ b/disjob-admin/ruoyi-admin/src/main/resources/application-druid.yml
@@ -6,9 +6,9 @@ spring:
         druid:
             # 主库数据源
             master:
-                url: jdbc:mysql://localhost:3306/disjob?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=GMT%2B8
-                username: disjob
-                password: disjob$123456
+                url: jdbc:mysql://localhost:3306/disjob_admin?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=GMT%2B8
+                username: disjob_admin
+                password: disjob_admin$123456
             # 从库数据源
             slave:
                 url:
