--- a/disjob-admin/ruoyi-admin/src/main/resources/application.yml
+++ b/disjob-admin/ruoyi-admin/src/main/resources/application.yml
@@ -76,7 +76,7 @@ spring:
 # MyBatis
 mybatis:
   # 搜索指定包别名
-  typeAliasesPackage: com.ruoyi.**.domain,cn.ponfee.disjob.admin.domain
+  typeAliasesPackage: com.ruoyi.**.domain
   # 配置mapper的扫描，找到所有的mapper.xml映射文件
   mapperLocations: classpath*:mapper/**/*Mapper.xml
   # 加载全局的配置文件
