--- a/disjob-admin/ruoyi-admin/src/main/resources/application-druid.yml
+++ b/disjob-admin/ruoyi-admin/src/main/resources/application-druid.yml
@@ -45,7 +45,7 @@ spring:
                 allow:
                 url-pattern: /druid/*
                 # 控制台管理用户名和密码
-                login-username: disjob
+                login-username: druid
                 login-password: 123456
             filter:
                 stat:
