--- a/disjob-common/pom.xml
+++ b/disjob-common/pom.xml
@@ -62,6 +62,10 @@
 
     <!-- spring dependencies -->
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-json</artifactId>
     </dependency>
